fixed nav alignment issue

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,6 +1,6 @@
 header.site-header {
-  display: flex;
+  display: grid;
   background: #ffffff;
-  color: #f0f0f0;
+  color: #ffffff;
   padding: 10px;
 }
